EKS_Multi_Tenant/EKS_Deployment_Scripts/Deployment_Files/namespace_resource_quota_sample.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenantthreenamespace
  labels:
    role: tenantthreenamespace
