EKS_Multi_Tenant/EKS_Deployment_Scripts/Deployment_Files/deployment_sample.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: tenantthreenamespace
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: tenantthreenamespace
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: 142269675036.dkr.ecr.us-west-2.amazonaws.com/celeg-ecrdo-1556o6c41w5e9:KubernetesTenant1app.master..2019-08-18.21.21.59.b63d6b24
          resources:
            requests:
              cpu: 200m
              memory: 0.5Gi
            limits:
              cpu: 400m
              memory: 1Gi
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: efs-pvc-tenantthreenamespace
              mountPath: "/mnttenantthreenamespace"
      restartPolicy: "Always"
      volumes:
         - name: efs-pvc-tenantthreenamespace
           persistentVolumeClaim:
                claimName: efs-tenantthreenamespace
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: tenantthreenamespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: app
              servicePort: 80
